<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">IQ Test</string>
    <string name="begin_test">begin test</string>
    <string name="iq_test_history">iq test history</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="history_header">History of the IQ test</string>
    <string name="history1">Paul Broca (1824 – 1880) and Sir Francis Galton (1822 – 1911) were among the first scientists to think about measuring intelligence. They thought they could determine intelligence by measuring the size of the human skull. They assumed that the larger the skull, the smarter the person.</string>
    <string name="history2">Around the same time, scientist Wilhelm Wundt (1932 – 1920) used introspection - the human ability to reflect on their own thoughts - as the measure of intelligence. Nowadays their methods and ideas are considered to be outmoded and are for sure no longer used for IQ tests, but they form a fundamental part of the history of the IQ test.</string>
    <string name="history3">The first modern intelligence test in IQ history was developed in 1904, by Alfred Binet (1857 – 1911) and Theodore Simon (1873–1961). The French Ministry of Education asked these researchers to develop a test that would allow for distinguishing mentally retarded children from normally intelligent, but lazy children. The result was the Simon-Binet IQ test. This IQ test consists of several components such as logical reasoning, finding rhyming words and naming objects.</string>
    <string name="history4">The score for the IQ test in combination with a child"'s age, provides information on the intellectual development of the child: is the child ahead of or lagging other children? The IQ was calculated as (mental age/chronological age) X 100. The test came to be a huge success, both in Europe and America.</string>
    <string name="Q1">1. 1, 3, 5, 7, 8, 9, 11 – which one doesn’t belong to this series?</string>
    <string name="Q2">2. Which two of the six is least like the other four?</string>
    <string name="Q3">3. 29, 27, 24, 20, 15,… What is next?</string>
    <string name="Q4">4. Which one of the 5 choices makes the best comparison? PEACH is to HCAEP as 46251 is to:</string>
    <string name="Q5">5. 2, 10, 12, 60, 62, 310… What is next?</string>
    <string name="Q6">6.</string>
    <string name="Q7">7. If all Bloops are Razzies and all Razzies are Lazzies, then all Bloops are definitely Lazzies?</string>
    <string name="Q8">8. 2, 4, 8, 16, 32, 64… What is next?</string>
    <string name="Q9">9.  Mary, who is 16 years old, is four times as old as her brother. How old will Mary be when she is twice as old as her brothers?</string>
    <string name="Q10">10. 121, 144, 169, 196… What is next?</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="Q2_A1">Dog</string>
    <string name="Q2_A2">Mouse</string>
    <string name="Q2_A3">Lion</string>
    <string name="Q2_A4">Snake</string>
    <string name="Q2_A5">Elephant</string>
    <string name="Q3_A1">7</string>
    <string name="Q3_A2">9</string>
    <string name="Q3_A3">10</string>
    <string name="Q3_A4">11</string>
    <string name="Q4_A1">25641</string>
    <string name="Q4_A2">26451</string>
    <string name="Q4_A3">12654</string>
    <string name="Q4_A4">51462</string>
    <string name="Q4_A5">15264</string>
    <string name="Q5_A1">312</string>
    <string name="Q5_A2">360</string>
    <string name="Q5_A3">1550</string>
    <string name="Q5_A4">4650</string>
    <string name="Q7_A1">True</string>
    <string name="Q7_A2">False</string>
    <string name="Q8_A1">90</string>
    <string name="Q8_A2">100</string>
    <string name="Q8_A3">140</string>
    <string name="Q8_A4">256</string>
    <string name="Q8_A5">128</string>
    <string name="Q9_A1">20</string>
    <string name="Q9_A2">24</string>
    <string name="Q9_A3">25</string>
    <string name="Q9_A4">26</string>
    <string name="Q9_A5">28</string>
    <string name="Q10_A1">225</string>
    <string name="Q10_A2">260</string>
    <string name="Q10_A3">298</string>
    <string name="Q10_A4">310</string>
    <string name="no_name_age_erroe">you must enter your name and age</string>
    <string name="Q2_A6">Eagle</string>
    <string name="Question_one_answer">8</string>
    <string name="score">Score</string>
    <string name="answers">Answers</string>
    <string name="Question_1_answer">8 – the series is made up of odd numbers.</string>
    <string name="question_2_answer">Snake and Eagle – they have no legs</string>
    <string name="question_3_answer">9 – the different between numbers in the series increments by 1 each time:29 minus 27 is 2, 27 minus 24 is 3, 24 minus 20 is 4, 20 minus 15 is 5 The last number in the series is 15 minus 6 = 9</string>
    <string name="question_4_answer">15264 – reversing the order of the letters in PEACH gives you HCAEP. So, reversing the numbers 46251 gives you 15264.</string>
    <string name="question_5_answer">312 - This series of numbers alternates between multiplying by 5 and adding 2:2 x 5 = 10 10 + 2 = 12, 12 x 5 = 60, 60 + 2 = 62,62 x 5 = 310 Finally, 310 + 2 = 312</string>
    <string name="question_6_answer">the first one - The three balls form a square with the missing ball. The balls are brighter towards the corners of the square.</string>
    <string name="question_7_answer">True</string>
    <string name="question_8_answer">128 – this series is based on multiplying by 2 each time2 x 2 = 4 2 x 4 = 8, 2 x 8 = 16, 2 x 16 = 32, 2 x 32 = 64 Finally, 2 x 64 = 128</string>
    <string name="question_9_answer">24 – if Mary is currently 16, her brother is currently 16 divided by 4 = 4.This makes Mary 12 years older than her brother. So, Mary will be double her brother’s age when he is 12.</string>
    <string name="question_10_answer">225 – in this series, the numbers are squares11 x 11 = 121 12 x 12 = 144 13 x 13 = 169 14 x 14 = 196 The next number in the series would be 15 x 15 = 225</string>
    <string name="answer_all_msg">you must answer all 10 questions</string>
    <string name="you_already_examed">you already examed</string>
    <string name="welcome">Welcome, <xliff:g example="Amy" id="name">%s</xliff:g>!</string>
    <string name="of10">/10</string>
    <string name="points">points</string>
    <string name="wrong_chosen"> it mustn\'t be chosen</string>
</resources>
