<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/d">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/history_header"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:padding="@dimen/padding10"
            android:text="@string/history1"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding10"
            android:paddingLeft="@dimen/padding10"
            android:paddingRight="@dimen/padding10"
            android:text="@string/history2"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding10"
            android:paddingLeft="@dimen/padding10"
            android:paddingRight="@dimen/padding10"
            android:text="@string/history3"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding10"
            android:paddingRight="@dimen/padding10"
            android:text="@string/history4"
            android:textColor="@android:color/background_dark" />
    </LinearLayout>

</ScrollView>
